# py-walk

./: README.md  justfile  patterns  pyproject.toml  requirements-dev.txt
.github/workflows/: code-formatting.yaml  publish.yaml  tests.yaml  type-checks.yaml
gitignore_match/: __init__.py  exceptions.py  logs.py  paths.py
gitignore_match/entrypoints/: __init__.py  get_parser_from_file.py  get_parser_from_list.py  get_parser_from_text.py  parse_pattern_file.py  parse_pattern_list.py  walk.py
gitignore_match/lib/git_glob_parser/: __init__.py  convert_to_regex.py  glob_lexer.py
gitignore_match/lib/gitglob_to_regex/: __init__.py  character_class_to_regex.py  gitglob_to_regex.py
gitignore_match/lib/wildmatch/: character_class_to_regex.py  glob_to_regex.py  wildmatch_to_parts.py
gitignore_match/models/: __init__.py  parser.py  pattern.py  pattern_collection.py
py_walk/: __init__.py  exceptions.py  logs.py
py_walk/entrypoints/: __init__.py  get_parser_from_file.py  get_parser_from_list.py  get_parser_from_text.py  pattern_text_to_pattern_list.py  walk.py
py_walk/lib/wildmatch/: __init__.py  character_class_to_regex.py  glob_to_regex.py  wildmatch_match.py  wildmatch_to_parts.py
py_walk/models/: __init__.py  parser.py  pattern.py
tests/: conftest.py  test_directory.py  test_entrypoint_parse_pattern_file.py  test_git_cases.py  test_lib_cases.py  test_patterns.py  test_text_to_list.py  test_token_question_mark.py  test_walk.py
tests/_fixtures/: git-tests.yaml  lib-tests.yaml  test-cases.yaml
tests/_fixtures/pattern-files/: basic-question-mark
