[project]
name = "py-walk"
version = "0.3.3"
authors = [
    {name="Andrés Sopeña Pérez", email="code@ehmm.org"},
]
description = "Filter filesystem paths based on gitignore-like patterns"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sly",
]

[project.urls]
"Homepage" = "https://github.com/pacha/py-walk"
"Bug Tracker" = "https://github.com/pacha/py-walk/issues"

[project.optional-dependencies]
dev = [
  "py-walk[tests,type-checks,code-formatting]",
]
tests = [
  "pytest",
  "pyyaml",
]
type-checks = [
  "mypy",
  "types-pyyaml",
]
code-formatting = [
  "black",
]
publish = [
  "build",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
log_cli = false
log_cli_level = "DEBUG"
log_cli_format = "%(message)s"
filterwarnings = ["ignore::FutureWarning"]

[tool.mypy]
ignore_missing_imports = true
